# gpd_ros

./: CMakeLists.txt  package.xml
src/gpd_ros/: grasp_detection_node.cpp
